Enhance CORS configuration by allowing multiple origins through environment variables, and update database URL to require SSL.